--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_miroom"
@@ -12,17 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_miroom_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Book_page"></activity>
+        <activity android:name=".SignUp"></activity>
+        <activity android:name=".Reservation_check_result"></activity>
+        <activity android:name=".Book_page" />
         <activity android:name=".Reservation_check" />
         <activity android:name=".Reservate" />
         <activity android:name=".Loading" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
